--- a/style.css
+++ b/style.css
@@ -65,15 +65,15 @@
 
         .tagline {
             font-size: 24px;
-            /* font-weight: 200; */
-            font-family: prompt;
+            font-family: prompt, sans-serif;
             color: #f4e4a8;
             line-height: 1.3;
             margin-bottom: 30px;
             text-transform: capitalize;
             display: flex;
-            gap: 20px;
-            justify-content: center;
+            /* flex-direction: column; */
+            justify-content: space-evenly;
+            align-items: center;
         }
 
         .btn {
