--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
             margin-bottom: 30px;
             text-transform: capitalize;
             display: flex;
-            /* flex-direction: column; */
+            flex-direction: column;
             justify-content: space-evenly;
             align-items: center;
         }
@@ -291,6 +291,14 @@
             margin-bottom: 20px;
             font-family: prompt;
         }
+        .tour-graphic {
+            width: 100%;
+            max-width: 600px;  /* or whatever size looks good on desktop */
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
+        
 
         /* Contact Section */
         .contact {
