--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
   background: #d4cfc7;
   color: #333;
   overflow-x: hidden;
@@ -29,12 +28,12 @@ body {
 
 .hero-headline {
   font-size: 150px;
-  font-weight: 500;
+  font-weight: black;
   color: #f4e4a8;
   letter-spacing: 10px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
   margin-bottom: 5px;
-  font-family: jaro;
+  font-family: prompt, system-ui, -apple-system, sans-serif;
 }
 
 .subtitle {
@@ -97,16 +96,20 @@ body {
 }
 
 .tagline {
-  font-size: 24px;
-  font-family: prompt, sans-serif;
   color: #f4e4a8;
   line-height: 1.3;
   margin-bottom: 30px;
   text-transform: capitalize;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.tagline h3 {
+    font-size: 20px;
+    font-family: prompt, sans-serif;
+
 }
 
 .btn {
@@ -325,10 +328,10 @@ body {
 
 .footer-logo {
   font-size: 72px;
-  font-weight: 500;
+  font-weight: black;
   color: #8b3a3a;
   letter-spacing: 8px;
-  font-family: jaro;
+  font-family: prompt, system-ui, -apple-system, sans-serif;
 }
 
 /* Responsive Design */
