adjust header on mobile

--- a/style.css
+++ b/style.css
@@ -364,7 +364,11 @@ body {
   }
 }
 @media (min-width: 768px) {
-  .container {
+    .hero-headline {
+        font-size: 125px;
+    }
+  
+    .container {
     max-width: 600px;
   }
 
