--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ body {
   cursor: pointer;
   transition: transform 0.2s, opacity 0.2s;
   text-decoration: none;
+  font-family: prompt, sans-serif;
 }
 
 .btn:active {
